test/success/drops/use_u64_multi/main.sk
module Main {

fn one(x: U64) {
}

fn two(x: U64, y: U64) {
}

fn condition() -> Bool {
    True
}

fn main() {
    let x: U64 = 5.toU64();
    one(x);
    if condition() {
    }
    two(x, x);
}

}