test/errors/borrowcheck/conditional/main.sk
module Main {

fn sink[T](t: T) {}

fn condition() -> Bool {
    True
}

fn main() {
    let x = 5;
    let y = &x;
    if condition() {
        sink(x);
    }
    sink(y);

}

}
